<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet"
    android:orientation="vertical"
    android:paddingBottom="30dp">

    <!-- Header -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/playfair_display"
            android:text="@string/sort_by"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            app:tint="@color/gray_text" />
    </RelativeLayout>

    <!-- Options -->
    <RadioGroup
        android:id="@+id/rg_sort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="20dp">

        <RadioButton
            android:id="@+id/rb_recommended"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:button="@null"
            android:drawableEnd="@drawable/selector_radio_orange"
            android:text="@string/recommended_sort"
            android:textColor="@color/selector_text_orange"
            android:textSize="13sp" />

        <RadioButton
            android:id="@+id/rb_rating"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:button="@null"
            android:drawableEnd="@drawable/selector_radio_orange"
            android:text="@string/customer_rating"
            android:textColor="@color/selector_text_orange"
            android:textSize="13sp" />

        <RadioButton
            android:id="@+id/rb_new_arrival"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:button="@null"
            android:drawableEnd="@drawable/selector_radio_orange"
            android:text="@string/new_arrival"
            android:textColor="@color/selector_text_orange"
            android:textSize="13sp" />

        <RadioButton
            android:id="@+id/rb_price_high_low"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:button="@null"
            android:drawableEnd="@drawable/selector_radio_orange"
            android:text="@string/price_high_to_low"
            android:textColor="@color/selector_text_orange"
            android:textSize="13sp" />

        <RadioButton
            android:id="@+id/rb_price_low_high"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:button="@null"
            android:drawableEnd="@drawable/selector_radio_orange"
            android:text="@string/price_low_to_high"
            android:textColor="@color/selector_text_orange"
            android:textSize="13sp" />

    </RadioGroup>

</LinearLayout>
